[package]
name = "question_cli"
edition = "2021"
version = "0.1.2"
authors = ["Joshua Yu"]
license = "MIT OR Apache-2.0"
description = "Internal research tool for question classification"
readme = "README.md"
repository = "https://github.com/jay-joshy/question_cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.23" 
