[package]
name = "question_cli"
edition = "2021"
version = "0.2.1"
authors = ["Joshua Yu"]
license = "MIT OR Apache-2.0"
description = "Internal research tool for question classification and/or answering."
readme = "README.md"
repository = "https://github.com/jay-joshy/question_cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.23" 
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.8"
colored = "2.1.0"
color-eyre = "0.6.3"
ratatui = "0.27.0"
chrono = "0.4.38"
