[package]
name = "question_cli"
edition = "2021"
version = "0.2.3"
authors = ["Joshua Yu"]
license = "MIT OR Apache-2.0"
description = "Internal research tool for question classification and/or answering."
readme = "README.md"
repository = "https://github.com/jay-joshy/question_cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = "0.27.0"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
